Bug # 35876 NDBAPI : Old Api scan with no bounds incorrectly handled

Changes :
 - An IndexBound which has neither an upper or lower bound is rejected with new error code
 - For old Api scans, when no bounds are set, we do not pass a bound into the scan.